--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
     <!-- Letter Section -->
     <section class="section letter">
       <h2>A Letter to You</h2>
-      <p>Dear [Girlfriend's Name],</p>
+      <p>Dear [Sayanika ji ],</p>
       <p>
         I know you're angry, and I truly regret my actions. I'm writing this letter to express my sincere apology.
         I value every moment we share and every smile you bring into my life. Please allow me the chance to make things right
         and show you how deeply I care.
       </p>
-      <p>With all my heart,<br>[Your Name]</p>
+      <p>With all my heart,<br>[Your Laraku]</p>
     </section>
     <!-- Poem Section -->
     <section class="section poem">
